# itingen

./: .env.example  .gitignore  CHANGELOG.md  IMPLEMENTATION_AUDIT.md  README.md  VALIDATION_FAILURE.md  VALIDATION_SUMMARY.md  check_api_key.py  check_billing.py  check_project.py  claude-code-best-practices-reference.md  claude-code-setup-prompt.md  greptile.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_api_tier.py  test_single_banner.py
.beads/: .gitignore  issues.jsonl
.claude/: CLAUDE.md  settings.json
.claude/agents/: planner.md  refactorer.md  reviewer.md  tester.md
.claude/commands/: commit.md  land.md  plan.md  review.md  start.md  test.md
.github/workflows/: tests.yml
.windsurf/rules/: skills-index.generated.md  skills-router.md  workflow-router.md
.windsurf/workflows/: commit.md  land.md  plan.md  review.md  start.md  test.md
.ws/: README.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATA_STRUCTURES.md  EXTRACTION_PLAN.md  INHERITED_DECISIONS.md  INTEGRATION_VALIDATION.md  PDF_GAPS.md  POC_VALIDATION.md  SESSION_NOTES.md  SOURCE_ANALYSIS.md  TEST_PLAN.md  TRANSITION_AI_PROPOSAL.md  agent-workspaces.md
docs/decisions/: 001-initial-architecture.md
docs/designs/: database-schema-v1.md
docs/product/: NORTH_STAR.md  PRD_INPUT_MODALITY.md  TDD_DATABASE.md  UX_DECISIONS.md
examples/: pipeline_example.py
scripts/: check_secrets.sh  commands_workflows_sync.py  copy_scaffold_images.py  populate_beads_roadmap.py  skills_index_generate.py  sync_windsurf.sh
src/itingen/: __init__.py  __main__.py  cli.py
tests/integration/: test_cli_e2e.py  test_file_provider_malformed.py  test_maps_integration.py  test_nz_regression.py  test_output_equivalence.py  test_pipeline_orchestrator.py  test_real_api_integrations.py
tests/unit/: test_ai_hydrators.py  test_annotations.py  test_banner_hydrator.py  test_cli.py  test_commands_workflows_sync.py  test_domain_strictness.py  test_duration_utils.py  test_emitters.py  test_exif.py  test_file_provider.py  test_fingerprint.py  test_gemini_client.py  (+25 more)
(+142 files in other folders)
